# TPS-Pro

./: .gitignore  README.md  __init__.py  __main__.py  constants.py  engine.py  evals.py  hardware.py  main.py  measurement.py  models.py  pipeline.py  pyproject.toml  requirements.txt  run.bat  search.py  state.py  trial_helpers.py
.github/workflows/: ci.yml
data/: ppl_reference.txt
src/tps_pro/: __init__.py  __main__.py  _types.py  errors.py  hardware.py  main.py  models.py  pipeline.py  pipeline_config.py  state.py
src/tps_pro/cli/: __init__.py  _helpers.py  args.py  config_editor.py  dashboard.py  display.py  menu.py  report.py  services.py  services_command.py  services_config.py  services_pipeline.py  setup.py  setup_binary.py  wizard.py
tests/: __init__.py  _ctx_factory.py  _evals_full_helpers.py  _tui_harness.py  conftest.py  test_bench.py  test_cli_layer.py  test_cli_services.py  test_cli_services_full.py  test_config_editor.py  test_constants.py  test_e2e.py  test_engine_platform.py  test_errors.py  test_evals.py  test_evals_full_integrity.py  test_evals_full_niah.py  test_evals_full_ppl.py  test_evals_integration.py  test_evals_integrity.py  test_evals_kl_divergence.py  test_evals_mcq.py  test_evals_niah.py  test_evals_perplexity.py  test_evals_quality_gate.py  test_hardware.py  test_integration.py  test_kv_sweep_logic.py  test_main_entry.py  test_main_unit.py  test_measurement_edge_cases.py  test_measurement_integration.py  test_measurement_pareto.py  test_measurement_perf.py  test_measurement_scoring.py  test_measurement_unit.py  test_models.py  test_phase_helpers.py  test_phase_objectives.py  test_phases_core_engine.py  (+29 more)
tools/: pipeline_analysis.py
(+54 files in other folders)
